style: fix styles on mobile

--- a/components/Filters/styles.module.css
+++ b/components/Filters/styles.module.css
@@ -1,4 +1,4 @@
-.containter {
+.container {
   grid-column: 4;
 }
 
@@ -25,4 +25,11 @@
   position: absolute;
   opacity: 0;
   inset: 0;
+}
+
+@media (max-width: 650px) {
+  .container {
+    grid-column: 1 / span 2;
+    grid-row: 2;
+  }
 }
